--- a/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Dungeons.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Dungeons.razor
@@ -84,14 +84,15 @@
                                 <div class="d-flex justify-space-between align-center gap-4 pa-2">
                                     <MudIconButton @onclick="() => MoveRoomLeft(CurrentRoom)" Color=Color.Primary Icon="@Icons.Material.Filled.ArrowBackIos"></MudIconButton>
                                     <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.DriveFileRenameOutline" ReadOnly=@true Value="@MapPositionRecord.GetMapName(CurrentRoom.MapId)" Label="Name" />
-                                    <MudIconButton  @onclick="() => DeleteRoom(CurrentRoom)" Icon="@Icons.Filled.Delete" Color="Color.Error"></MudIconButton>
+                                    <MudIconButton @onclick="() => DeleteRoom(CurrentRoom)" Icon="@Icons.Filled.Delete" Color="Color.Error"></MudIconButton>
+                                    <MudIconButton @onclick="() => AddRoom()" Icon="@Icons.Filled.Add" Color="Color.Primary"></MudIconButton>
                                     <MudIconButton @onclick="() => MoveRoomRight(CurrentRoom)" Color=Color.Primary Icon="@Icons.Material.Filled.ArrowForwardIos"></MudIconButton>
                                 </div>
 
 
 
                                 <div class="d-flex gap-4 pa-2">
-                                    <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.LocationOn"  @bind-Value="@CurrentRoom.MapId" Label="MapId" />
+                                    <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.LocationOn" @bind-Value="@CurrentRoom.MapId" Label="MapId" />
                                     <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Timer" @bind-Value="@CurrentRoom.RespawnDelay" Label="Respawn delay" />
 
                                 </div>
@@ -149,7 +150,6 @@
                         </MudTabPanel>
                     }
 
-
                 </MudTabs>
 
 
@@ -187,6 +187,11 @@
 
             return result;
         }
+    }
+
+    void AddRoom()
+    {
+        SelectedDungeon.Rooms.Add(new MonsterRoom());
     }
 
     void DeleteRoom(MonsterRoom room)
@@ -295,7 +300,7 @@
     {
         CurrentRoom.MonsterIds.RemoveAt(index);
         StateHasChanged();
-  
+
     }
     void MoveUpMonster(int index)
     {
