[Nitram] World editor bugfix

--- a/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Npcs/NpcTalk.razor
+++ b/Sources/Tools/Giny.WorldEditor/Components/Roleplay/Npcs/NpcTalk.razor
@@ -193,7 +193,13 @@
         }
 
         Replies = NpcReplyRecord.GetNpcReplies(NpcAction.NpcSpawnId, messageId).ToList();
+    }
+    public void UpdateAction(NpcActionRecord action)
+    {
+        NpcAction = action;
+        RefreshData();
         StateHasChanged();
+
     }
     protected override void OnInitialized()
     {
